# PLAY-ON

./: .gitignore  PLAY-ON!.code-workspace  README.md  package-lock.json  package.json  vite.config.ts
public/extensions/: animepahe.js  animeparadise.js  index.json  sample-anime.js
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anilist.rs  casting.rs  cbz_reader.rs  file_system.rs  lib.rs  mac_name.rs  main.rs  media_player.rs  myanimelist.rs  stream_server.rs  winName.rs  win_name.rs
src/api/: anilistClient.ts
src/components/: AniListExample.tsx  Counter.tsx  CurrentlyWatching.tsx  DeepLinkHandler.tsx  Layout.tsx  MainLayout.tsx  PillNav.tsx  Sidebar.tsx  Titlebar.tsx  UIComponents.tsx
src/config/: config.ts
src/context/: AuthContext.tsx  DynamicThemeContext.tsx  LocalMediaContext.tsx  NotificationContext.tsx  NowPlayingContext.tsx  SearchBarContext.tsx  SettingsContext.tsx  ThemeContext.tsx  ToastContext.tsx
src/extensions/: weebcentral.ts
src/hooks/: useAniListUser.ts  useAnimeData.ts  useAnimeImages.ts  useAuth.ts  useDiscordRPC.ts  useFavoriteAnime.ts  useFolderMappings.ts  useHistory.ts  useKeyboardShortcuts.ts  useMangaMappings.ts  useUpdateAnime.ts  useUserAnimeList.ts  useWindowVisibility.ts
src/layouts/: MainLayout.tsx
src/lib/: apollo.ts  cacheRefresh.ts  cacheUtils.ts  localAnimeDb.ts  localMangaDb.ts  offlineQueue.ts  pdfReader.ts  syncService.ts  theme.ts
src/pages/: AnimeBrowse.css  AnimeBrowse.tsx  AnimeDetails.tsx  AnimeList.tsx  AnimeSourceDetails.css  AnimeSourceDetails.tsx  AnimeWatch.css  AnimeWatch.tsx  Calendar.tsx  CounterDemo.tsx  History.tsx  Home.tsx  LocalAnimeList.tsx  LocalFileReader.tsx  LocalFolder.tsx  LocalMangaList.tsx  MangaBrowse.css  MangaBrowse.tsx  MangaDetails.tsx  MangaList.tsx  MangaReader.css  MangaReader.tsx  MangaSourceDetails.css  MangaSourceDetails.tsx  Notifications.tsx  NowPlaying.tsx  Onboarding.tsx  Seasons.tsx  Settings.css  Settings.tsx  (+5 more)
(+57 files in other folders)
