[package]
name = "play-on"
version = "1.0.1"
description = "Local Anime & Manga Player along with tracker"
authors = ["MemestaVedas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "play_on_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-deep-link = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-dialog = "2"
base64 = "0.22.1"
lofty = "0.22.4"
tauri-plugin-shell = "2.3.3"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
regex = "1.12.2"
tauri-plugin-process = "2"
tauri-plugin-drpc = "0.1.6"
lazy_static = "1.4"
tauri-plugin-notification = "2.3.3"
zip = "0.6"
natord = "1.0"
urlencoding = "2.1.3"
futures = "0.3"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
tauri-plugin-fs = "2.4.4"
rand = "0.8"
tauri-plugin-autostart = "2"
rust_cast = { path = "./rust-cast" }
warp = { version = "0.4.2", features = ["server"] }
local-ip-address = "0.6.9"
mdns-sd = "0.17.2"
bytes = "1.11.0"
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1.44"
rustls = { version = "0.23", features = ["ring"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
